[gd_scene load_steps=8 format=1]

[ext_resource path="res://game_single/game_single.gd" type="Script" id=1]
[ext_resource path="res://actor/scene/green_sky/green_sky.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor/houyi/houyi.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor/aiming/aiming_sight.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/fonts/comic_bold.fnt" type="BitmapFont" id=6]
[ext_resource path="res://ui/head_shot/head_shot.tscn" type="PackedScene" id=7]

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )
init_speed = 2000.0
gravity = 1500.0
character_move_speed = 500.0
wind_slow_down = 100

[node name="scene_arts" parent="." instance=ExtResource( 2 )]

[node name="column_enemy" type="Node2D" parent="."]

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 515.768, 294.984 )
transform/rot = 90.0
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = false
drag_margin/v_enabled = false
smoothing/enable = true
smoothing/speed = 1.5
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="archer" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 100, 452 )

[node name="weapon" type="Node2D" parent="."]

[node name="aiming_sight" parent="." instance=ExtResource( 4 )]

visibility/visible = false

[node name="ui" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="game_over" parent="ui" instance=ExtResource( 5 )]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
margin/left = 512.0
margin/top = 300.0
margin/right = 512.0
margin/bottom = 300.0

[node name="score" type="Label" parent="ui"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 56.0
margin/top = 1.0
margin/right = -49.0
margin/bottom = 42.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="coin" type="Label" parent="ui"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -407.0
margin/top = 1.0
margin/right = -512.0
margin/bottom = 42.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="head_shot" parent="ui" instance=ExtResource( 7 )]

margin/left = 354.0
margin/top = 223.0
margin/right = 394.0
margin/bottom = 263.0


